# screening

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: abcd_digits.yaml  animeface-label2id.json  context_flow_matching_animeface.yaml  flow_matching_one_image.yaml  mnist.yaml
notebooks/: flow_matching_samples.ipynb  mnist_screening_trace.ipynb
src/screening/: __init__.py  abcd_digits.py  baseline.py  flow.py  image.py  module.py  screening.py  tokenizer.py
src/screening/models/: __init__.py  flow_matching.py  image_model.py  language_model.py
src/screening/modules/: __init__.py  common.py  context_encoder.py  screening.py  transformer.py
tests/: test_abcd_digits.py  test_module.py  test_tokenizer.py  test_train_config.py
tests/screening/: test_flow_matching.py  test_module.py
train/: abcd_digits.py  context_flow_matching.py  flow_matching.py  mnist.py
