[project]
name = "screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flash-screening",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "polars>=1.40.1",
    "pydantic>=2.13.3",
    "pyyaml>=6.0.3",
    "schedulefree>=1.4.1",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "wandb>=0.26.1",
]

[dependency-groups]
dev = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[build-system]
requires = ["uv_build>=0.11,<0.12"]
build-backend = "uv_build"

[tool.uv.sources]
flash-screening = { git = "https://github.com/p1atdev/flash-screening.git" }
